test/types/file/fwriteIntFailed.good
fwriteIntFailed.chpl:5: error: halt reached - ***Error: ./fwriteIntFailed.txt not open for writing***
